Fix logo enlarged on mobile orientation change (#6)
* Fix logo enlarged on mobile orientation change

* Revert

* Fix logo sizing on orientation change

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -15,7 +15,7 @@
     height: 100vh;
   }
 
-  &.isCollapsed {
+  &.isCollapsed:not(.isMobileMenuOpen) {
     @media (min-width: breakpoint.$desktop) {
       width: 5.1875rem;
 
